# HacktoberFest

./: .classpath  .coverage  .gitignore  .md  .project  0 1 Knapsack.cpp  01 INTRODUCTION.C  02 AGE.C  03 SUM.C  04 READ N WRITE.C  05 ASCII.C  0dayherman.md  0x033c.md  10 TEMPERATURE.C  14 UNARY OPERATOR.C  1463- Cherry Pickup-II.java  15 RELATIONAL OPERATOR.C  16 LOGICAL OPERATOR.C  17 TERNARY OPERATOR.C  18 BITWISE OPERATOR.C  2048.cpp  25 VIBGYOR IF ELSE.C  26 GREATEST AMONG 3 IF ELSE.C  27 LEAP YEAR IF ELSE.C  28 EVEN ODD SWITCH CASE.C  2nd method  for kth nodes append.cpp  30 LEAP YEAR TERNARY.C  31 VIBGYOR SWITCH CASE.C  32 CALCULATOR SWITCH CASE.C  35 FOR LOOP.C  36 TABLE FOR LOOP.C  40 PALLINDROME.C  41 ARMSTRONG.C  44 FIBONACCIE SERIES.C  52 NO ARGUM. NO RETURN.C  54 NO ARGUM RETURN.C  56 PALLINDROME WITH ARGUM, NO RETURN VALUE.C  60 SWAP USING CALL BY VALUE.C  62 FIBONACCIE BY RECURSION.C  63 SUM OF DIGIT BY RECURSION.C  (+1664 more)
.history/: Saurabh_20231009103423.md  Saurabh_20231009103808.md  Saurabh_20231009103828.md
2048 GAME PROJECT/: CONSTANTS.ipynb  FINAL .ipynb  logic.ipynb
2118_chilling_cafe/: ABOUT THIS TEMPLATE.txt  index.html
django-url-shortener-rest-api/: .deepsource.toml  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
django-url-shortener-rest-api/api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
django-url-shortener-rest-api/api/migrations/: 0001_initial.py  0002_rename_shorternedurl_shortenedurl.py
django-url-shortener-rest-api/urlshortener/: asgi.py  settings.py  urls.py  wsgi.py
(+2337 files in other folders)
